# piphany

./: .gitignore  Cargo.toml  README.md
book/src/: spec.md
examples/: test.csv  test_loading.scm
src/: debug_utils.rs  derivation_graph.rs  main.rs  vm.rs
src/derivation_graph/: derivation.rs  derivation_runner.rs
src/derivation_graph/derivation/: dataframe.rs  evaluator.rs  file.rs  generator.rs  iterator.rs  process.rs  test.rs
src/derivation_graph/derivation/process/: scriptstring.rs
src/steel-modules/: derivation.scm  main.scm
src/steel-modules/tests/: basic_interpolations.scm  data_frame_subset.scm  data_frame_with_column.scm  node_interpolation.scm  parameterized_derivation.scm
src/vm/: convenience_functions.rs
